Revert "Add bottom padding to sidebar to prevent footer overlap"
This reverts commit f39d42fd2e2daf07c04f4c6961e0cdc1eb0f28ab.

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -22,7 +22,6 @@
     overflow-y: auto;               // Add scrollbar if the sidebar is too long
     position: fixed;
     padding-top: $masthead-height;
-    padding-bottom: 150px;          // Add padding to prevent footer overlap
   }
 
   @include breakpoint($large) {
